build.log
[  5%] Built target kissfft
[ 17%] Built target UnifiedAudioEngine
[ 19%] Built target analyze_recording
[ 21%] Built target audio_trimmer
[ 22%] Built target audio_visualization
[ 24%] Built target debug_dtw_similarity
[ 26%] Built target detailed_analysis
[ 27%] Built target generate_features
[ 28%] Built target interactive_recorder
[ 29%] Built target real_time_recording_monitor
[ 31%] Built target simple_unified_test
[ 33%] Built target test_mfcc_debugging
[ 34%] Built target gtest
[ 36%] Built target gtest_main
[ 37%] Building CXX object CMakeFiles/RunEngineTests.dir/tests/unit/test_unified_engine_advanced.cpp.o
/mnt/e/develop/Huntmaster/huntmaster-engine/tests/unit/test_unified_engine_advanced.cpp: In member function ‘virtual void UnifiedAudioEngineAdvancedTest_MasterCallManagementTest_Test::TestBody()’:
/mnt/e/develop/Huntmaster/huntmaster-engine/tests/unit/test_unified_engine_advanced.cpp:506:22: error: ‘remove’ is not a member of ‘std::filesystem’
  506 |     std::filesystem::remove(testMasterCallPath);
      |                      ^~~~~~
/mnt/e/develop/Huntmaster/huntmaster-engine/tests/unit/test_unified_engine_advanced.cpp:506:22: note: suggested alternatives:
In file included from /usr/include/c++/13/cstdio:42,
                 from /usr/include/c++/13/ext/string_conversions.h:45,
                 from /usr/include/c++/13/bits/basic_string.h:4109,
                 from /usr/include/c++/13/string:54,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/iomanip:42,
                 from /mnt/e/develop/Huntmaster/huntmaster-engine/tests/lib/googletest/googletest/include/gtest/gtest.h:54,
                 from /mnt/e/develop/Huntmaster/huntmaster-engine/tests/unit/test_unified_engine_advanced.cpp:1:
/usr/include/stdio.h:158:12: note:   ‘remove’
  158 | extern int remove (const char *__filename) __THROW;
      |            ^~~~~~
In file included from /usr/include/c++/13/functional:67,
                 from /mnt/e/develop/Huntmaster/huntmaster-engine/tests/lib/googletest/googletest/include/gtest/gtest-matchers.h:43,
                 from /mnt/e/develop/Huntmaster/huntmaster-engine/tests/lib/googletest/googletest/include/gtest/internal/gtest-death-test-internal.h:47,
                 from /mnt/e/develop/Huntmaster/huntmaster-engine/tests/lib/googletest/googletest/include/gtest/gtest-death-test.h:43,
                 from /mnt/e/develop/Huntmaster/huntmaster-engine/tests/lib/googletest/googletest/include/gtest/gtest.h:65:
/usr/include/c++/13/bits/stl_algo.h:836:5: note:   ‘std::remove’
  836 |     remove(_ForwardIterator __first, _ForwardIterator __last,
      |     ^~~~~~
make[2]: *** [CMakeFiles/RunEngineTests.dir/build.make:426: CMakeFiles/RunEngineTests.dir/tests/unit/test_unified_engine_advanced.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:558: CMakeFiles/RunEngineTests.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
